# bua

./: .env.example  Dockerfile  README.md  pyproject.toml
agent/: __init__.py  homologador_agent.py
src/: requirements.txt
src/bua/: __main__.py  utils.py
src/bua/agent/: README_homologador.md  agent.py  exemplo_homologador.py  homologador_agent.py
src/bua/computers/: actions.py  computer.py  config.py
src/bua/computers/default/: __init__.py  browserbase.py  local_playwright.py  notte.py  scrapybara.py
src/bua/computers/shared/: base_playwright.py
src/bua/temporal/: homologacao_workflow.py  worker.py
